--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,7 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Base.Theme.FundFlow"
         tools:targetApi="31">
-
+        <activity
+            android:name=".Profile1Activity"
+            android:exported="false" />
         <activity
             android:name=".FinanceRegisterActivity"
             android:exported="false" />
