--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Base.Theme.FundFlow"
         tools:targetApi="31">
         <activity
+            android:name=".UserProfileActivity"
+            android:exported="false"
+            />
+        <activity
             android:name=".Profile1Activity"
             android:exported="false" />
         <activity
@@ -23,7 +27,8 @@
             android:exported="false" />
         <activity
             android:name=".UserHomeActivity"
-            android:exported="false" />
+            android:exported="false"
+            />
         <activity
             android:name=".FinanceHomeActivity"
             android:exported="false" />
